@@ -11,16 +11,23 @@ import mozharness.l10n.locales as locales
 ALL_LOCALES = ['ar', 'be', 'de', 'es-ES']
 
 def cleanup():
-    pass
+    if os.path.exists('test_logs'):
+        shutil.rmtree('test_logs')
 
-class LocalesTest(locales.LocalesMixin, log.LogMixin, script.OSMixin,
-                  script.ShellMixin):
-    def __init__(self):
-        super(LocalesTest, self).__init__()
+class LocalesTest(locales.LocalesMixin, script.BaseScript):
+    def __init__(self, **kwargs):
+        if 'config' not in kwargs:
+            kwargs['config'] = {'log_type': 'simple',
+                                'log_level': 'error'}
+        if 'initial_config_file' not in kwargs:
+            kwargs['initial_config_file'] = 'test/test.json'
+        super(LocalesTest, self).__init__(**kwargs)
         self.config = {}
         self.log_obj = None
 
 class TestLocalesMixin(unittest.TestCase):
+    BASE_ABS_DIRS = ['abs_compare_locales_dir', 'abs_log_dir',
+                     'abs_upload_dir', 'abs_work_dir']
     def setUp(self):
         cleanup()
 
@@ -66,7 +73,55 @@ class TestLocalesMixin(unittest.TestCase):
 
     def test_parse_locales_file(self):
         l = LocalesTest()
-        locales = ['be', 'es-ES']
-        ignore_locales = ['ar', 'de']
-        l.config['ignore_locales'] = ignore_locales
-        self.assertEqual(locales, l.parse_locales_file('test/helper_files/locales.txt'))
+        self.assertEqual(ALL_LOCALES, l.parse_locales_file('test/helper_files/locales.txt'))
+
+    def _get_query_abs_dirs_obj(self):
+        l = LocalesTest()
+        l.config['base_work_dir'] = "base_work_dir"
+        l.config['work_dir'] = "work_dir"
+        return l
+
+    def test_query_abs_dirs_base(self):
+        l = self._get_query_abs_dirs_obj()
+        dirs = l.query_abs_dirs().keys()
+        dirs.sort()
+        self.assertEqual(dirs, self.BASE_ABS_DIRS)
+
+    def test_query_abs_dirs_base2(self):
+        l = self._get_query_abs_dirs_obj()
+        l.query_abs_dirs().keys()
+        dirs = l.query_abs_dirs().keys()
+        dirs.sort()
+        self.assertEqual(dirs, self.BASE_ABS_DIRS)
+
+    def test_query_abs_dirs_l10n(self):
+        l = self._get_query_abs_dirs_obj()
+        l.config['l10n_dir'] = "l10n_dir"
+        dirs = l.query_abs_dirs().keys()
+        dirs.sort()
+        expected_dirs = self.BASE_ABS_DIRS + ['abs_l10n_dir']
+        expected_dirs.sort()
+        self.assertEqual(dirs, expected_dirs)
+
+    def test_query_abs_dirs_mozilla(self):
+        l = self._get_query_abs_dirs_obj()
+        l.config['l10n_dir'] = "l10n_dir"
+        l.config['mozilla_dir'] = "mozilla_dir"
+        l.config['locales_dir'] = "locales_dir"
+        dirs = l.query_abs_dirs().keys()
+        dirs.sort()
+        expected_dirs = self.BASE_ABS_DIRS + ['abs_mozilla_dir', 'abs_locales_src_dir', 'abs_l10n_dir']
+        expected_dirs.sort()
+        self.assertEqual(dirs, expected_dirs)
+
+    def test_query_abs_dirs_objdir(self):
+        l = self._get_query_abs_dirs_obj()
+        l.config['l10n_dir'] = "l10n_dir"
+        l.config['mozilla_dir'] = "mozilla_dir"
+        l.config['locales_dir'] = "locales_dir"
+        l.config['objdir'] = "objdir"
+        dirs = l.query_abs_dirs().keys()
+        dirs.sort()
+        expected_dirs = self.BASE_ABS_DIRS + ['abs_mozilla_dir', 'abs_locales_src_dir', 'abs_l10n_dir', 'abs_objdir', 'abs_merge_dir', 'abs_locales_dir']
+        expected_dirs.sort()
+        self.assertEqual(dirs, expected_dirs)
